# Cmake-sdl2-catch2

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: clang-format.cmake
docs/: RPG_specification.md
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test_lib.cpp
